# trn

./: .clang-format  .cvsignore  .editorconfig  .gitignore  .package  AsyncPlan.md  CMakeLists.txt  CMakePresets.json  Configure  HACKERSGUIDE.txt  INSTALL  MANIFEST  Makefile.SH  Pnews.1  Pnews.SH  Policy_sh.SH  README  ReadMe.md  Rnmail.1  Rnmail.SH  StructureFunctions.md  access_def.SH  addng.c  addng.cpp  addng.h  addng.ih  art.c  art.cpp  art.h  artio.c  artio.cpp  artio.h  artsrch.cpp  artsrch.h  artstate.h  autosub.c  autosub.cpp  autosub.h  backpage.cpp  backpage.h  (+266 more)
.github/workflows/: cmake.yml
HelpFiles/: changelog
HelpFiles/samples/: access
U/: Config_h.U  Config_sh.U  Extract.U  Extractall.U  Finish.U  Loc.U  Myinit.U  Oldconfig.U  Oldsym.U  README  active.U  ccflags.U  d_bcmp.U  d_bcopy.U  d_bzero.U  d_const.U  d_ftime.U  d_getwd.U  d_havetlib.U  d_ignoreorg.U  d_nntp.U  d_novoid.U  d_open3.U  d_rename.U  d_sizet.U  d_speedopt.U  d_stat.U  d_strchr.U  d_strftime.U  d_strstr.U  d_usendir.U  filexp.U  h_fcntl.U  libc.U  libextract.U  libsearch.U  locdist.U  mimecap.U  newsspool.U  src.U  (+2 more)
cmake/: Configure.cmake  FindBoostAsio.cmake  Findsockets.cmake  config.h.in
config/: CMakeLists.txt  common.cpp  common.h  config.h.in  config2.h  debug.cpp  msdos.h  string_case_compare.cpp  user_id.h
config/cmake/: config.h.in  configure_trn.cmake  fdio.fcntl.h.in  fdio.io.h.in  pipe_io.Linux.h.in  pipe_io.underscore.h.in  string_case_compare.Linux.h.in  string_case_compare.Windows.h.in
config/data/: CMakeLists.txt  Pnews.header.in  Pnews.in  Speller.in  access_def.in  environment.in  filexp.in  mbox.saver.in  newsnews.in  norm.saver.in
config/include/config/: StrongInt.h  common.h  config2.h  msdos.h  typedef.h  user_id.h
config/legacy/: CMakeLists.txt  Configure  Pnews.SH  Speller.SH  access_def.SH  fixConf
config/legacy/U/: Config_sh.U  Extract.U  Oldconfig.U  Options.U  bin.U  ccflags.U  d_gethname.U  d_getwd.U  filexp2.U  i_ptem.U  i_time.U  ispell_prg.U  lib.U  libc.U  mansrc.U  myhostname.U  newslib.U  orgname.U  pager.U  perlpath.U  phost.U  privlib.U  prototype.U  strn.U  threaddir.U  tk.U  trn_init.U
config/legacy/msdos/: config.sh
config/tests/: CMakeLists.txt  test_string_case_compare.cpp  test_strong_int.cpp
hints/: freebsd.sh  linux.sh
inews/: CMakeLists.txt  inews.cpp
libtrn/: Article.cpp  CMakeLists.txt  Subject.cpp  addng.cpp  addng.h  art.cpp  artio.cpp  artsrch.cpp  artsrch.h  artstate.h  autosub.cpp  autosub.h  backpage.cpp  bits.cpp  bits.h  cache.cpp  cache.h  charsubst.cpp  charsubst.h  color.cpp  color.h  datasrc.cpp  datasrc.h  decode.cpp  decode.h  edit_dist.cpp  edit_dist.h  enum-flags.h  final.cpp  hash.cpp  head.cpp  head.h  help.cpp  init.cpp  intrp.cpp  kfile.cpp  last.cpp  list.cpp  list.h  mempool.cpp  (+74 more)
libtrn/include/trn/: Article.h  Subject.h  addng.h  art.h  artio.h  artsrch.h  artstate.h  autosub.h  backpage.h  bits.h  cache.h  change_dir.h  charsubst.h  color.h  datasrc.h  decode.h  edit_dist.h  enum-flags.h  final.h  hash.h  head.h  help.h  init.h  intrp.h  kfile.h  last.h  list.h  mempool.h  mime-internal.h  mime.h  ng.h  ngdata.h  ngsrch.h  ngstuff.h  nntp.h  only.h  opt.h  rcln.h  rcstuff.h  respond.h  (+34 more)
man/: trn.1
nntp/: CMakeLists.txt  nntpauth.cpp  nntpclient.cpp  nntpinit.cpp
nntp/include/nntp/: nntpauth.h  nntpclient.h  nntpinit.h
nntplist/: CMakeLists.txt  nntplist.cpp
os2/: config.sh
parsedate/: CMakeLists.txt  parsedate.y
parsedate/include/parsedate/: parsedate.h
parsedate/tests/: CMakeLists.txt  test.cpp
pcre/: README  internal.h  pcre.c
samples/: mimecap
support/: filter.README
support/tk/: atree.tcl
tests/: CMakeLists.txt  mock_env.h  test.cpp  test_cache.cpp  test_config.h.in  test_current_time.cpp  test_enum_order.cpp  test_flags.cpp  test_getwd.cpp  test_init.cpp  test_interp.cpp  test_makedir.cpp  test_mime.cpp  test_nntp.cpp  test_rt-util.cpp  test_string-algos.cpp  test_utf.cpp  test_wildmat.cpp
tests/cmake/: ConfigureTrnTestData.cmake  test_access_file.in  test_active_file.in  test_article.in  test_article_no_reply_to.in  test_config.h.in  test_data.cpp.in  test_default_access_file.in  test_makedir.h.in  test_nntp_newsrc.in
tests/headers/: CMakeLists.txt  test_addng.cpp  test_art.cpp  test_artio.cpp  test_artsrch.cpp  test_artstate.cpp  test_autosub.cpp  test_backpage.cpp  test_bits.cpp  test_cache.cpp  test_change_dir.cpp  test_charsubst.cpp  test_color.cpp  test_datasrc.cpp  test_decode.cpp  test_edit_dist.cpp  test_enum-flags.cpp  test_final.cpp  test_hash.cpp  test_head.cpp  test_help.cpp  test_init.cpp  test_intrp.cpp  test_kfile.cpp  test_last.cpp  test_list.cpp  test_mempool.cpp  test_mime-internal.cpp  test_mime.cpp  test_ng.cpp  test_ngdata.cpp  test_ngsrch.cpp  test_ngstuff.cpp  test_nntp.cpp  test_only.cpp  test_opt.cpp  test_patchlevel.cpp  test_rcln.cpp  test_rcstuff.cpp  test_respond.cpp  (+34 more)
tests/parsedate/: CMakeLists.txt  test.cpp
tests/trn/: CMakeLists.txt  mock_env.h  test_common.cpp  test_enum_order.cpp  test_flags.cpp  test_init.cpp  test_interp.cpp  test_mime.cpp  test_nntp.cpp  test_rt-util.cpp  test_string-algos.cpp  test_utf.cpp
tests/trn/cmake/: ConfigureTrnTestData.cmake  test_access_file.in  test_article_no_fallbacks.in  test_config.h.in  test_data.cpp.in  test_local_newsrc.in  test_mime.h.in  test_mimecap_file.in  test_organization_file.in
tool/: CMakeLists.txt  util3.cpp  util3.h
tool/include/tool/: util3.h
trn-artchk/: CMakeLists.txt  trn-artchk.cpp
util/: CMakeLists.txt  env-internal.h  env.cpp  env.h  util2.cpp  util2.h  wildmat.cpp
util/include/util/: env-internal.h  env.h  util2.h  wildmat.h
wildmat/: CMakeLists.txt  wildmat.cpp
