add_library(legacy INTERFACE
    .package
    CMakeLists.txt
    Configure
    filexp.SH
    fixConf
    GNUmakefile
    Makefile.SH
    MANIFEST.txt
    mbox_saver.SH
    newsnews.SH
    norm_saver.SH
    Pnews.SH
    Policy_sh.SH
    Rnmail.SH
    Speller.SH
    hints/aix_rs.sh
    hints/altos486.sh
    hints/convexos.sh
    hints/dec_osf1.sh
    hints/dgux.sh
    hints/domainos.sh
    hints/dynix.sh
    hints/freebsd.sh
    hints/hp9000_800.sh
    hints/hpux.sh
    hints/i386.sh
    hints/irix.sh
    hints/isc_2_2_1.sh
    hints/isc_3_2_2.sh
    hints/isc_3_2_3.sh
    hints/linux.sh
    hints/mc6000.sh
    hints/mips.sh
    hints/next.sh
    hints/sco_3.sh
    hints/sco_3_2_4.sh
    hints/sco_xenix.sh
    hints/sgi.sh
    hints/solaris_2.sh
    hints/sunos.sh
    hints/svr4.sh
    msdos/config.sh
    U/bin.U
    U/d_ignoreorg.U
    U/d_nntp.U
    U/d_speedopt.U
    U/Extract.U
    U/filexp.U
    U/filexp2.U
    U/Finish.U
    U/h_fcntl.U
    U/ispell_prg.U
    U/i_time.U
    U/lib.U
    U/libc.U
    U/libextract.U
    U/libsearch.U
    U/Loc.U
    U/locdist.U
    U/mansrc.U
    U/mimecap.U
    U/myhostname.U
    U/Myinit.U
    U/newslib.U
    U/newsspool.U
    U/Oldconfig.U
    U/Oldsym.U
    U/Options.U
    U/orgname.U
    U/pager.U
    U/perlpath.U
    U/phost.U
    U/privlib.U
    U/prototype.U
    U/README
    U/src.U
    U/strn.U
    U/threaddir.U
    U/tk.U
    U/trn_init.U
)
source_group("MetaConfig Units" REGULAR_EXPRESSION "^.*\\.U$")
source_group("Shell Templates" REGULAR_EXPRESSION "^.*\\.SH$")
source_group("Configure Hints" REGULAR_EXPRESSION "^.*hints/.*\\.sh$")
target_folder(legacy "Libraries")
