add_executable(trn-headers-test
    test_addng.cpp
    test_art.cpp
    test_artio.cpp
    test_artsrch.cpp
    test_artstate.cpp
    test_autosub.cpp
    test_backpage.cpp
    test_bits.cpp
    test_cache.cpp
    test_change_dir.cpp
    test_charsubst.cpp
    test_color.cpp
    test_datasrc.cpp
    test_decode.cpp
    test_edit_dist.cpp
    test_enum-flags.cpp
    test_final.cpp
    test_hash.cpp
    test_head.cpp
    test_help.cpp
    test_init.cpp
    test_intrp.cpp
    test_kfile.cpp
    test_last.cpp
    test_list.cpp
    test_mempool.cpp
    test_mime-internal.cpp
    test_mime.cpp
    test_ng.cpp
    test_ngdata.cpp
    test_ngsrch.cpp
    test_ngstuff.cpp
    test_nntp.cpp
    test_only.cpp
    test_opt.cpp
    test_patchlevel.cpp
    test_rcln.cpp
    test_rcstuff.cpp
    test_respond.cpp
    test_rt-ov.cpp
    test_rt-page.cpp
    test_rt-process.cpp
    test_rt-select.cpp
    test_rt-util.cpp
    test_rt-wumpus.cpp
    test_rthread.cpp
    test_sacmd.cpp
    test_sadesc.cpp
    test_sadisp.cpp
    test_samain.cpp
    test_samisc.cpp
    test_sathread.cpp
    test_scan.cpp
    test_scanart.cpp
    test_scmd.cpp
    test_score-easy.cpp
    test_score.cpp
    test_scorefile.cpp
    test_scoresave.cpp
    test_sdisp.cpp
    test_search.cpp
    test_smisc.cpp
    test_sorder.cpp
    test_spage.cpp
    test_string-algos.cpp
    test_sw.cpp
    test_terminal.cpp
    test_trn.cpp
    test_univ.cpp
    test_url.cpp
    test_utf.cpp
    test_util.cpp
    test_uudecode.cpp
)
target_link_libraries(trn-headers-test PUBLIC libtrn GTest::gtest_main)
target_folder(trn-headers-test "Tests")
gtest_discover_tests(trn-headers-test PROPERTIES LABELS trn-headers)
